apps/nimbus-platform/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nimbus-platform-canary
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: nimbus-platform
