apps/nimbus-platform/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: nimbus-platform-stable
  labels:
    monitoring.nimbus.io/scrape: "true"
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: nimbus-platform
