apps/nimbus-platform/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nimbus-platform
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  ingressClassName: nginx
  rules:
    - host: nimbus.example.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nimbus-platform-stable
                port:
                  number: 80
